...

	<!-- Misc -->
	<string name="now">now</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="got_it">Got it</string>
	<string name="delete">Delete</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="options">Options</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="send">Send</string>
	<string name="allow">Allow</string>
	<string name="open">Open</string>
	<string name="no_data">No data</string>
	<string name="ellipsis">…</string>
	<string name="text_too_long">The entered text is too long</string>
	<string name="show_onboarding">Show Help Dialog</string>
...
	<string name="groups_reveal_visible_revealed_by_us">Contact relationship is visible to the group (revealed by you)</string>
	<string name="groups_reveal_visible_revealed_by_contact">Contact relationship is visible to the group (revealed by %s)</string>
	<string name="groups_reveal_invisible">Contact relationship is not visible to the group</string>

	<!-- Forums -->
	<string name="no_forums">You don\'t have any forums yet.\n\nWhy don\'t you create a new one yourself by tapping the + icon at the top?\n\nYou can also ask your contacts to share forums with you.</string>
	<string name="create_forum_title">Create Forum</string>
	<string name="choose_forum_hint">Choose a name for your forum</string>
	<string name="choose_forum_description">Choose a description for your forum</string>
	<string name="create_forum_button">Create Forum</string>
	<string name="forum_created_toast">Forum created</string>
	<string name="no_forum_posts">This forum is empty.\n\nUse the pen icon at the top to compose the first post.\n\nFeeling lonely here? Share this forum with more of your contacts!</string>
	<string name="no_posts">No posts</string>
...
		<item quantity="one">%d post</item>
		<item quantity="other">%d posts</item>
	</plurals>
	<string name="forum_new_entry_posted">Forum entry posted</string>
	<string name="forum_new_message_hint">New Entry</string>
	<string name="forum_message_reply_hint">New Reply</string>
	<string name="btn_reply">Reply</string>
	<string name="forum_leave">Leave Forum</string>
	<string name="dialog_title_leave_forum">Confirm Leaving Forum</string>
	<string name="dialog_message_leave_forum">Are you sure that you want to leave this forum? Contacts you have shared this forum with might get cut off from receiving updates for this forum.</string>
	<string name="dialog_button_leave">Leave</string>
	<string name="forum_left_toast">Left Forum</string>

	<!-- Forum Sharing -->
	<string name="forum_share_button">Share Forum</string>
	<string name="contacts_selected">Contacts selected</string>
	<string name="activity_share_toolbar_header">Choose Contacts</string>
...
	<string name="forum_invitation_already_sharing">Already sharing</string>
	<string name="forum_invitation_response_accepted_sent">You accepted the forum invitation from %s.</string>
	<string name="forum_invitation_response_declined_sent">You declined the forum invitation from %s.</string>
	<string name="forum_invitation_response_accepted_received">%s accepted the forum invitation.</string>
	<string name="forum_invitation_response_declined_received">%s declined the forum invitation.</string>

	<string name="sharing_status">Sharing Status</string>
	<string name="sharing_status_forum">Any member of a forum can share it with their contacts. You are sharing this forum with the following contacts. There may also be other members who you can\'t see.</string>
	<string name="shared_with">Shared with %1$d (%2$d online)</string>
	<plurals name="forums_shared">
		<item quantity="one">%d forum shared by contacts</item>
		<item quantity="other">%d forums shared by contacts</item>
	</plurals>
...
