...
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/margin_large">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/createForumNameLayout"
		android:layout_width="match_parent"
		android:layout_height="74dp"
		app:errorEnabled="true">

		<EditText
			android:id="@+id/createForumNameEntry"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/choose_forum_hint"
			android:inputType="text|textCapSentences"
			android:maxLines="1"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/createForumDescriptionLayout"
		android:layout_width="match_parent"
		android:layout_height="74dp"
		app:errorEnabled="true">

		<EditText
			android:id="@+id/createForumDescriptionEntry"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/choose_forum_description"
			android:inputType="text|textCapSentences"
			android:maxLines="1"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/createForumButton"
		style="@style/BriarButton"
		android:enabled="false"
		android:text="@string/create_forum_button"/>

	<ProgressBar
		android:id="@+id/createForumProgressBar"
...
