...

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<org.thoughtcrime.securesms.components.emoji.EmojiToggle
			android:id="@+id/emoji_toggle"
			android:layout_width="@dimen/text_input_height"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:padding="@dimen/margin_small"
			android:scaleType="center"/>

		<org.thoughtcrime.securesms.components.emoji.EmojiEditText
			android:id="@+id/input_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@android:color/transparent"
			android:inputType="textMultiLine|textCapSentences"
			android:maxLines="3"
			android:minHeight="@dimen/text_input_height"
			android:textColor="?attr/briar_text_primary"
			android:textColorHint="?attr/briar_text_tertiary"/>

		<ImageButton
			android:id="@+id/btn_send"
			android:layout_width="@dimen/text_input_height"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:contentDescription="@string/send"
			android:enabled="false"
...
